[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Jose Caloca <jose.caloca3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
requests = "^2.32.3"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
tqdm = "^4.66.4"
plotly = "^5.22.0"
scikit-learn = "^1.5.0"
xgboost = "^2.1.0"
lightgbm = "^4.4.0"
optuna = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
